Main page created

--- a/index.html
+++ b/index.html
@@ -28,8 +28,15 @@
           alt="bg"
           id="mainBackgroundImg"
         />
+        <span id="span1">Hello ~</span>
+        <span id="span2">I'm Simon Lee</span>
+        <span id="span3">Front-end Developer</span>
+        <button id="mainBackgroundBtn"><a href="#">More About Me</a></button>
       </section>
-      <section id="mainAboutMe">Hi World</section>
+      <section id="mainAboutMe">
+        <div class="infoTitle">MAIN INFO</div>
+        <div class="infoSubTitle">ABOUT ME</div>
+      </section>
     </main>
 
     <!-- Footer -->
