My info page created

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <section id="headerLogo">Simon Lee</section>
       <section id="headerMenu">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About Me</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./aboutme.html">About Me</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
@@ -31,7 +31,9 @@
         <span id="span1">Hello ~</span>
         <span id="span2">I'm Simon Lee</span>
         <span id="span3">Front-end Developer</span>
-        <button id="mainBackgroundBtn"><a href="#">More About Me</a></button>
+        <button id="mainBackgroundBtn">
+          <a href="./aboutme.html">More About Me</a>
+        </button>
       </section>
       <section id="mainAboutMe">
         <div class="infoTitle">MAIN INFO</div>
