--- a/aboutme.html
+++ b/aboutme.html
@@ -68,13 +68,15 @@
         <airtlcle class="aboutMeSEEBtn">
           <button>EDUCATION</button>
         </airtlcle>
-
+      </section>
+      <!-- SEE Contents -->
+      <section id="aboutMeSEEContent">
         <div id="aboutMeSEEContent">
-          <div id="aboutMeSkill" style="display: flex">
+          <div id="aboutMeSkill">
             <div id="aboutMeSkillCard">
               <div class="aboutMeSkillLan">
-                <div class="aboutMeSkillLanTitle">HTML</div>
-                <div class="aboutMeSkillLanPercent">80%</div>
+                <div class="aboutMeSkillLanTitle"></div>
+                <div class="aboutMeSkillLanPercent"></div>
               </div>
               <div class="aboutMeSkillBar">
                 <div class="aboutMeSkillBarPercent"></div>
@@ -107,6 +109,8 @@
         </div>
       </section>
     </main>
+
+    <footer></footer>
 
     <!-- Javascript -->
     <script src="./resources/js/app.js" type="text/javascript"></script>
