--- a/aboutme.html
+++ b/aboutme.html
@@ -71,42 +71,9 @@
       </section>
       <!-- SEE Contents -->
       <section id="aboutMeSEEContent">
-        <div id="aboutMeSEEContent">
-          <div id="aboutMeSkill">
-            <div id="aboutMeSkillCard">
-              <div class="aboutMeSkillLan">
-                <div class="aboutMeSkillLanTitle"></div>
-                <div class="aboutMeSkillLanPercent"></div>
-              </div>
-              <div class="aboutMeSkillBar">
-                <div class="aboutMeSkillBarPercent"></div>
-              </div>
-            </div>
-
-            <div class="aboutMeSkillLan">
-              <div class="aboutMeSkillLanTitle"></div>
-              <div class="aboutMeSkillLanPercent"></div>
-            </div>
-            <div class="aboutMeSkillLan">
-              <div class="aboutMeSkillLanTitle"></div>
-              <div class="aboutMeSkillLanPercent"></div>
-            </div>
-            <div class="aboutMeSkillLan">
-              <div class="aboutMeSkillLanTitle"></div>
-              <div class="aboutMeSkillLanPercent"></div>
-            </div>
-            <div class="aboutMeSkillLan">
-              <div class="aboutMeSkillLanTitle"></div>
-              <div class="aboutMeSkillLanPercent"></div>
-            </div>
-            <div class="aboutMeSkillLan">
-              <div class="aboutMeSkillLanTitle"></div>
-              <div class="aboutMeSkillLanPercent"></div>
-            </div>
-          </div>
-          <div id="aboutMeExperience" style="display: none"></div>
-          <div id="aboutMeEducation" style="display: none"></div>
-        </div>
+        <div id="aboutMeSkill"></div>
+        <div id="aboutMeExperience" style="display: none"></div>
+        <div id="aboutMeEducation" style="display: none"></div>
       </section>
     </main>
 
