Print button name done

--- a/aboutme.html
+++ b/aboutme.html
@@ -72,16 +72,18 @@
       <!-- SEE Contents -->
       <section id="aboutMeSEEContent">
         <div id="aboutMeSkill"></div>
-        <div id="aboutMeExperience" style="display: none"></div>
-        <div id="aboutMeEducation" style="display: none"></div>
+        <div id="aboutMeExperience" style="display: none">
+          Good Morning World
+        </div>
+        <div id="aboutMeEducation" style="display: none">Good Night World</div>
       </section>
     </main>
 
     <footer></footer>
 
     <!-- Javascript -->
-    <script src="./resources/js/app.js" type="text/javascript"></script>
     <script src="./resources/js/data.js" type="text/javascript"></script>
     <script src="./resources/js/text.js" type="text/javascript"></script>
+    <script src="./resources/js/app.js" type="text/javascript"></script>
   </body>
 </html>
