SEE page done and Portfolio page started

--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./aboutme.html">About Me</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </section>
@@ -60,22 +60,26 @@
       <!-- SEE -->
       <section id="aboutMeSEE">
         <article class="aboutMeSEEBtn">
-          <button>SKILLS</button>
+          <button type="button">SKILLS</button>
         </article>
         <article class="aboutMeSEEBtn">
-          <button>EXPERIENCE</button>
+          <button type="button">EXPERIENCE</button>
         </article>
         <airtlcle class="aboutMeSEEBtn">
-          <button>EDUCATION</button>
+          <button type="button">EDUCATION</button>
         </airtlcle>
       </section>
       <!-- SEE Contents -->
       <section id="aboutMeSEEContent">
-        <div id="aboutMeSkill"></div>
-        <div id="aboutMeExperience" style="display: none">
-          Good Morning World
-        </div>
-        <div id="aboutMeEducation" style="display: none">Good Night World</div>
+        <div id="aboutMeSkill" style="display: none"></div>
+        <div id="aboutMeExperience" style="display: none"></div>
+        <div id="aboutMeEducation" style="display: none">
+          <div id="aboutMeEduDegree">
+            <div class="aboutMeEduTitle">Degree Program</div>
+          </div>
+          <div id="aboutMeEduCert">
+            <div class="aboutMeEduTitle">Certificate Program</div>
+          </div>
       </section>
     </main>
 
