--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./aboutme.html">About Me</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </section>
