--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
           <li><a href="./index.html">Home</a></li>
           <li><a href="./aboutme.html">About Me</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </section>
     </header>
@@ -24,7 +24,7 @@
     <main id="portfolioBody">
       <section id="introTitle">
         <div id="introMainTitle">MAIN INFO</div>
-        <div id="introSubTitle">PORTFOLIO</div>
+        <div id="introSubTitle">CONTACT ME</div>
       </section>
     </main>
 
