--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
           <li><a href="./index.html">Home</a></li>
           <li><a href="./aboutme.html">About Me</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </section>
     </header>
@@ -25,6 +25,24 @@
       <section id="introTitle">
         <div id="introMainTitle">MAIN INFO</div>
         <div id="introSubTitle">PORTFOLIO</div>
+      </section>
+      <section id="pfSection">
+        <div class="pfCard">
+          <img src="./resources/img/PF/pf1.png" class="pfImg" />
+          <div class="pfTitle">Weather Dashboard</div>
+        </div>
+        <div class="pfCard">
+          <img src="./resources/img/PF/pf2.png" class="pfImg" />
+          <div class="pfTitle">Weather Dashboard</div>
+        </div>
+        <div class="pfCard">
+          <img src="./resources/img/PF/pf3.png" class="pfImg" />
+          <div class="pfTitle">Weather Dashboard</div>
+        </div>
+        <div class="pfCard">
+          <img src="./resources/img/PF/pf4.png" class="pfImg" />
+          <div class="pfTitle">Weather Dashboard</div>
+        </div>
       </section>
     </main>
 
