--- a/aboutme.html
+++ b/aboutme.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Developer - Simon Lee</title>
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./resources/css/style.css" />
+    <link rel="stylesheet" href="./resources/css/style.css" /> -->
   </head>
   <body>
     <!-- Header -->
@@ -86,8 +86,8 @@
     <footer></footer>
 
     <!-- Javascript -->
-    <script src="./resources/js/data.js" type="text/javascript"></script>
+    <!-- <script src="./resources/js/data.js" type="text/javascript"></script>
     <script src="./resources/js/text.js" type="text/javascript"></script>
-    <script src="./resources/js/app.js" type="text/javascript"></script>
+    <script src="./resources/js/app.js" type="text/javascript"></script> -->
   </body>
 </html>
