Project Card Hover effects created

--- a/index.html
+++ b/index.html
@@ -109,37 +109,7 @@
         <div class="introMainTitle">MAIN INFO</div>
         <div class="introSubTitle">PORTFOLIO</div>
       </section>
-      <section id="pfSection">
-        <div class="pfCard">
-          <img src="./resources/img/PF/pf1.png" class="pfImg" />
-          <div class="pfTitle">
-            <div class="pfTItleBg"></div>
-            <div class="pfProject">Weather Dashboard</div>
-            <div class="pfLang">Javascript</div>
-            <a href="#"><button type="button" class="pfBtn">LEARN MORE</button></a>
-          </div>
-        </div>
-        <div class="pfCard">
-          <img src="./resources/img/PF/pf2.png" class="pfImg" />
-          <div class="pfTitle">Weather Dashboard</div>
-        </div>
-        <div class="pfCard">
-          <img src="./resources/img/PF/pf3.png" class="pfImg" />
-          <div class="pfTitle">Weather Dashboard</div>
-        </div>
-        <div class="pfCard">
-          <img src="./resources/img/PF/pf4.png" class="pfImg" />
-          <div class="pfTitle">Weather Dashboard</div>
-        </div>
-        <div class="pfCard">
-          <img src="./resources/img/PF/pf5.png" class="pfImg" />
-          <div class="pfTitle">Weather Dashboard</div>
-        </div>
-        <div class="pfCard">
-          <img src="./resources/img/PF/pf6.png" class="pfImg" />
-          <div class="pfTitle">Weather Dashboard</div>
-        </div>
-      </section>
+      <section id="pfSection"></section>
     </main>
 
     
