Portfolio Card Border added)
q
exit
][

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li><a href="#main">Home</a></li>
           <li><a href="#aboutMeBody">About Me</a></li>
           <li><a href="#portfolioBody">Portfolio</a></li>
-          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="#contactBody">Contact</a></li>
         </ul>
       </section>
     </header>
@@ -114,7 +114,7 @@
 
     
     <!-- Contact Me --> <!-- Contact Me --> <!-- Contact Me --> <!-- Contact Me --> <!-- Contact Me --> <!-- Contact Me --> <!-- Contact Me --> <!-- Contact Me --> 
-
+<main id="contactBody"></main>
 
 
 
