--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
       <section id="intro">
         <div id="introImgBtn">
           <img src="./resources/img/myPhoto.JPG" id="introImg" alt="myPhoto" />
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-facebook-square"></i></a>
-          <a href="#"><i class="fab fa-slack"></i></a>
-          <a href="#"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/great-simonlee" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/great-simonlee/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.youtube.com/channel/UCl3FYAY8ouvC6xNAcAMcI3A" target="_blank"><i class="fab fa-youtube"></i></a>
+          <a href="https://www.instagram.com/simonlee0630/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/seunghoon.lee.7311" target="_blank"><i class="fab fa-facebook-square"></i></a>
           <div id="introMsg">
             <i class="fas fa-envelope"></i>
             <span>great.simonlee@gmail.com</span>
@@ -71,7 +71,7 @@
             <button class="introCVBtn">Download CV</button>
           </div>
           <div id="introHireMe">
-            <button class="introCVBtn">Hire Me</button>
+            <a href="#contactBody"><button class="introCVBtn">Hire Me</button></a>
           </div>
         </div>
         <div id="introText"></div>
@@ -136,11 +136,11 @@
       <section>
         <div id="footerSNS">
           <ul>
-            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-            <li><a href="#"><i class="fab fa-slack"></i></a></li>
-            <li><a href="#"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://github.com/great-simonlee" target="_blank"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/great-simonlee/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://www.youtube.com/channel/UCl3FYAY8ouvC6xNAcAMcI3A" target="_blank"><i class="fab fa-youtube"></i></a></li>
+            <li><a href="https://www.instagram.com/simonlee0630/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com/seunghoon.lee.7311" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
           </ul>
         </div>
         <div id="footerMark">Created by Simon Lee. Oct 2020.</div>
